--- a/index.html
+++ b/index.html
@@ -1,42 +1,85 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>The Story of the Chinese Farmer</title>
+    <link rel="stylesheet" href="css/chinese%20farmer.css">
+    <h1>The Story of the Chinese Farmer</h1>
+    <h3>11 may 2016, Alexandre Gorius</h3>
+    <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="a picture of a modern chinese farmer">
+</head>
+<body>
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<h2>Preamble</h2>
+<ul>
+    <Li>read this once</Li>
+    <li>then read it again</li>
+    <li>then tell it to your <a href="http://www.google.com" target="_blank"title="best friend">best friend</a></li>
+</ul>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+<figure>
+    <figcaption>The story</figcaption>
+    <blockquote>
+        <p>Once upon a time there was a Chinese farmer whose horse ran away.
+            That evening, all of his neighbors came around to commiserate.
+            They said, “We are so sorry to hear your horse has run away. This is most unfortunate.”
+            The farmer said, <em>“Maybe.”</em><br>
+            The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said,
+            “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!”
+            The farmer again said, <em>“Maybe.”</em><br>
+            The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg.
+            The neighbors then said, “Oh dear, that’s too <b class="BAD">BAD</b>,”
+            and the farmer responded, <em>“Maybe.”</em><br>
+            The next day the conscription officers came around to conscript people into the army,
+            and they rejected his son because he had a broken leg.
+            Again all the neighbors came around and said, “Isn’t that great!”
+            Again, he said, <em>“Maybe.”</em><br>
+            The whole process of nature is an integrated process of immense complexity,
+            and it’s really impossible to tell whether anything that happens in it is <b class="GOOD">GOOD</b> or <b class="BAD">BAD</b> —
+            because you never know what will be the consequence of the misfortune;
+            or, you never know what will be the consequences of <b class="GOOD">GOOD</b> fortune.</p>
+        <p>Alan Watts</p>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+    </blockquote>
+</figure>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+<p>Here is this dialog in the form of a table</p>
+<table style="width:20%">
+    <tr>
+        <th>Event</th>
+        <th><b class="GOOD">GOOD</b> or <b class="BAD">BAD</b>?</th>
+    </tr>
+    <tr>
+        <td>Lose a horse</td>
+        <td>Maybe</td>
+    </tr>
+    <tr>
+        <td>Win more horses</td>
+        <td>Maybe</td>
+    </tr>
+    <tr>
+        <td>Son injury</td>
+        <td>Maybe</td>
+    </tr>
+    <tr>
+        <td>Avoid war</td>
+        <td>Maybe</td>
+    </tr>
+</table>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-    </body>
+
+<h3>Conclusion</h3>
+<p><b class="GOOD">GOOD</b> and <b class="BAD">BAD</b> are just one perspective.<br>
+    <a href="https://cheezburger.com/3056299520/one-angry-monkey" target="_blank"title="Bananas are GOOD for monkeys, but monkeys are not GOOD for bananas.">
+        Bananas are <b class="GOOD">GOOD</b> for monkeys, but monkeys are not <b class="GOOD">GOOD</b> for bananas.</a> <br>
+    Let's not make a big deal out of it...</p>
+
+<hr>
+</body>
+<footer>
+    <p>Copyright Just Another Company 2017. All right reserved. <br>
+        Adapted from this article: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO" target="_blank"title="https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer">https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/</a></p>
+</footer>
+
+
 </html>
