--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>The Story of the Chinese Farmer</title>
     <link rel="stylesheet" href="css/chinese%20farmer.css">
@@ -18,57 +20,60 @@
 </ul>
 
 <figure>
-    <figcaption>The story</figcaption>
     <blockquote>
-        <p>Once upon a time there was a Chinese farmer whose horse ran away.
+        <figcaption>The story</figcaption>
+        <p><b>Once upon a time there was a Chinese farmer whose horse ran away.
             That evening, all of his neighbors came around to commiserate.
-            They said, “We are so sorry to hear your horse has run away. This is most unfortunate.”
-            The farmer said, <em>“Maybe.”</em><br>
-            The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said,
-            “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!”
-            The farmer again said, <em>“Maybe.”</em><br>
+            They said, <i>“We are so sorry to hear your horse has run away. This is most unfortunate.”</i>
+            The farmer said, <strong>“Maybe.”</strong></b></p>
+            <p>The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said,
+            <i>“Oh, isn’t that lucky. What a great turn of events. You now have eight horses!”</i>
+            The farmer again said, <strong>“Maybe.”</strong><br>
             The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg.
-            The neighbors then said, “Oh dear, that’s too <b class="BAD">BAD</b>,”
-            and the farmer responded, <em>“Maybe.”</em><br>
+            The neighbors then said, <i>“Oh dear, that’s too <b class="BAD">BAD</b>,”</i>
+            and the farmer responded, <strong>“Maybe.”</strong><br>
             The next day the conscription officers came around to conscript people into the army,
             and they rejected his son because he had a broken leg.
-            Again all the neighbors came around and said, “Isn’t that great!”
-            Again, he said, <em>“Maybe.”</em><br>
+            Again all the neighbors came around and said, <i>“Isn’t that great!”</i>
+            Again, he said, <strong>“Maybe.”</strong><br>
             The whole process of nature is an integrated process of immense complexity,
             and it’s really impossible to tell whether anything that happens in it is <b class="GOOD">GOOD</b> or <b class="BAD">BAD</b> —
             because you never know what will be the consequence of the misfortune;
             or, you never know what will be the consequences of <b class="GOOD">GOOD</b> fortune.</p>
         <p>Alan Watts</p>
-
     </blockquote>
 </figure>
 
 <p>Here is this dialog in the form of a table</p>
 <table style="width:20%">
-    <tr>
+    <tr class="row-uneven">
         <th>Event</th>
         <th><b class="GOOD">GOOD</b> or <b class="BAD">BAD</b>?</th>
     </tr>
-    <tr>
+    <tr class="row-even">
         <td>Lose a horse</td>
         <td>Maybe</td>
     </tr>
-    <tr>
+    <tr class="row-uneven">
         <td>Win more horses</td>
         <td>Maybe</td>
     </tr>
-    <tr>
+    <tr class="row-even">
         <td>Son injury</td>
         <td>Maybe</td>
     </tr>
-    <tr>
+    <tr class="row-uneven">
         <td>Avoid war</td>
         <td>Maybe</td>
     </tr>
 </table>
 
+<aside class="notification">
+    <p>messages here!</p>
+</aside>
 
-<h3>Conclusion</h3>
+
+<h2>Conclusion</h2>
 <p><b class="GOOD">GOOD</b> and <b class="BAD">BAD</b> are just one perspective.<br>
     <a href="https://cheezburger.com/3056299520/one-angry-monkey" target="_blank"title="Bananas are GOOD for monkeys, but monkeys are not GOOD for bananas.">
         Bananas are <b class="GOOD">GOOD</b> for monkeys, but monkeys are not <b class="GOOD">GOOD</b> for bananas.</a> <br>
